// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar component test suite Snapshot render TopBar with new message and no selected message and no selected folder, should render in edit mode without buttons 1`] = `
<header
  className="
      mdc-top-app-bar mdc-top-app-bar--fixed"
>
  <TopBarMessageEditor
    collapsed={false}
    sideBarToggle={[MockFunction]}
    title="Isotope Mail Client - TITLE"
  />
  <Translate(ConfirmDeleteFromTrashDialog)
    cancelAction={[Function]}
    deleteAction={[Function]}
    visible={false}
  />
</header>
`;

exports[`TopBar component test suite Snapshot render TopBar with selected folder (and messageIds) and no new message and no selected message, should render in list mode with delete and mark read buttons 1`] = `
<header
  className="
      mdc-top-app-bar mdc-top-app-bar--fixed"
>
  <Translate(TopBarMessageList)
    collapsed={false}
    onDeleteClick={[Function]}
    onMarkReadClick={[Function]}
    onMarkUnreadClick={[Function]}
    selectedMessages={
      Array [
        Object {
          "uid": 1,
        },
      ]
    }
    sideBarToggle={[MockFunction]}
    title="SelectedFolder - Isotope Mail Client - TITLE"
  />
  <Translate(ConfirmDeleteFromTrashDialog)
    cancelAction={[Function]}
    deleteAction={[Function]}
    visible={false}
  />
</header>
`;

exports[`TopBar component test suite Snapshot render TopBar with selected folder and no new message and no selected message, should render in list mode 1`] = `
<header
  className="
      mdc-top-app-bar mdc-top-app-bar--fixed"
>
  <Translate(TopBarMessageList)
    collapsed={false}
    onDeleteClick={[Function]}
    onMarkReadClick={[Function]}
    onMarkUnreadClick={[Function]}
    selectedMessages={Array []}
    sideBarToggle={[MockFunction]}
    title="SelectedFolder - Isotope Mail Client - TITLE"
  />
  <Translate(ConfirmDeleteFromTrashDialog)
    cancelAction={[Function]}
    deleteAction={[Function]}
    visible={false}
  />
</header>
`;

exports[`TopBar component test suite Snapshot render TopBar with selected message and no new message and no selected folder, should render in view mode with buttons 1`] = `
<header
  className="
      mdc-top-app-bar mdc-top-app-bar--fixed"
>
  <Translate(TopBarMessageViewer)
    collapsed={false}
    onDeleteClick={[Function]}
    outboxEmpty={true}
    sideBarToggle={[MockFunction]}
  />
  <Translate(ConfirmDeleteFromTrashDialog)
    cancelAction={[Function]}
    deleteAction={[Function]}
    visible={false}
  />
</header>
`;
